WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73456
[GTK] HTML5 Youtube video fullscreen button doesn't work
https://bugs.webkit.org/show_bug.cgi?id=73456
Summary
[GTK] HTML5 Youtube video fullscreen button doesn't work
Philippe Normand
Reported
2011-11-30 09:15:40 PST
Because ChromeClient::supportsFullScreenForElement returns false if the withKeyboard argument is set to true. Chrome's ChromeClient ignores this variable and always returns true.
Attachments
proposed patch
(1.59 KB, patch)
2011-11-30 09:17 PST
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2011-11-30 09:17:08 PST
Created
attachment 117205
[details]
proposed patch
Philippe Normand
Comment 2
2011-11-30 10:03:30 PST
Committed
r101526
: <
http://trac.webkit.org/changeset/101526
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug