[GTK] HTML5 Youtube video fullscreen button doesn't work https://bugs.webkit.org/show_bug.cgi?id=73456

Reviewed by Martin Robinson.

* WebCoreSupport/ChromeClientGtk.cpp:
(WebKit::ChromeClient::supportsFullScreenForElement): Ignore
withKeyboard argument value, like Chrome's implementation.

git-svn-id: svn://svn.chromium.org/blink/trunk@101526 bbb929c8-8fbe-4397-9dbb-9b2b20218538