third_party/WebKit/Source/WebKit/gtk/WebCoreSupport/ChromeClientGtk.cpp
@@ -881,9 +881,6 @@ void ChromeClient::exitFullscreenForNode(Node* node)
 #if ENABLE(FULLSCREEN_API)
 bool ChromeClient::supportsFullScreenForElement(const WebCore::Element* element, bool withKeyboard)
 {
-    if (withKeyboard)
-        return false;
-
     return true;
 }
 
